force-app/main/default/objects/POC_Product__mdt/POC_Product__mdt.object-meta.xml
<CustomObject>
    <label>POC Product</label>
    <pluralLabel>POC Product</pluralLabel>
</CustomObject>