force-app/main/default/objects/POC_Product__mdt/fields/Conditional_PO__c.field-meta.xml
<CustomField>
    <fullName>Conditional_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conditional PO</label>
    <type>Checkbox</type>
</CustomField>