force-app/main/default/objects/POC_Product__mdt/fields/Is_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Is_Accessories__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Accessories</label>
    <type>Checkbox</type>
</CustomField>