force-app/main/default/objects/POC_Product__mdt/fields/Max_per_Appliance_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Max_per_Appliance_Quantity__c</fullName>
    <label>Max per Appliance Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>