force-app/main/default/objects/POC_Product__mdt/fields/Menu_Index__c.field-meta.xml
<CustomField>
    <fullName>Menu_Index__c</fullName>
    <label>Menu Index</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>