force-app/main/default/objects/POC_Product__mdt/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <label>Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWS</fullName>
                <default>true</default>
                <label>AWS</label>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>1GbE SFP</fullName>
            </value>
            <value>
                <fullName>Cisco Twinax Cables</fullName>
            </value>
            <value>
                <fullName>Fiber Cables</fullName>
            </value>
            <value>
                <fullName>EDGE</fullName>
            </value>
            <value>
                <fullName>10GbE SFP+</fullName>
            </value>
            <value>
                <fullName>Radar</fullName>
            </value>
            <value>
                <fullName>O365</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>AWS Cloud-Native Protection</fullName>
            </value>
            <value>
                <fullName>Cloud Native Protection (AWS, Azure, GCP)</fullName>
            </value>
            <value>
                <fullName>SONAR</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Cloud Out</fullName>
            </value>
            <value>
                <fullName>NAS Cloud Direct</fullName>
            </value>
            <value>
                <fullName>M365 Rubrik Hosted</fullName>
            </value>
            <value>
                <fullName>M365 Customer Hosted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>