force-app/main/default/objects/POC_Product__mdt/fields/POC_Type__c.field-meta.xml
<CustomField>
    <fullName>POC_Type__c</fullName>
    <label>POC Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>