force-app/main/default/objects/POC_Product__mdt/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>r300</fullName>
                <default>true</default>
                <label>r300</label>
            </value>
            <value>
                <fullName>r500</fullName>
            </value>
            <value>
                <fullName>r600</fullName>
            </value>
            <value>
                <fullName>CloudOn</fullName>
            </value>
            <value>
                <fullName>Cloud Cluster</fullName>
            </value>
            <value>
                <fullName>EDGE</fullName>
            </value>
            <value>
                <fullName>Polaris</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>r6000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>