force-app/main/default/objects/POC_Product__mdt/fields/Product_Requested__c.field-meta.xml
<CustomField>
    <fullName>Product_Requested__c</fullName>
    <label>Product Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R334</fullName>
                <default>true</default>
                <label>R334</label>
            </value>
            <value>
                <fullName>R344</fullName>
            </value>
            <value>
                <fullName>R348</fullName>
            </value>
            <value>
                <fullName>R3410</fullName>
            </value>
            <value>
                <fullName>R528E</fullName>
            </value>
            <value>
                <fullName>R6304S</fullName>
            </value>
            <value>
                <fullName>R6404S</fullName>
            </value>
            <value>
                <fullName>R6408S</fullName>
            </value>
            <value>
                <fullName>R6410S</fullName>
            </value>
            <value>
                <fullName>R6412S</fullName>
            </value>
            <value>
                <fullName>Cloud Cluster</fullName>
            </value>
            <value>
                <fullName>CloudOn</fullName>
            </value>
            <value>
                <fullName>EDGE</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Polaris for Appliance</fullName>
            </value>
            <value>
                <fullName>Polaris for Edge</fullName>
            </value>
            <value>
                <fullName>Polaris for Cloud Cluster</fullName>
            </value>
            <value>
                <fullName>Polaris Radar</fullName>
            </value>
            <value>
                <fullName>Polaris O365</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>