force-app/main/default/objects/POC_Product__mdt/fields/Software_Encryption__c.field-meta.xml
<CustomField>
    <fullName>Software_Encryption__c</fullName>
    <label>Software Encryption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <default>true</default>
                <label>Y</label>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>