force-app/main/default/objects/POC_Product__mdt/fields/Sub_Option__c.field-meta.xml
<CustomField>
    <fullName>Sub_Option__c</fullName>
    <label>Sub Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3M</fullName>
                <default>true</default>
                <label>3M</label>
            </value>
            <value>
                <fullName>5M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>