force-app/main/default/objects/POC_Product__mdt/fields/Subscription_for_POC__c.field-meta.xml
<CustomField>
    <fullName>Subscription_for_POC__c</fullName>
    <label>Subscription for POC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>EDGE</fullName>
            </value>
            <value>
                <fullName>Cloud On</fullName>
            </value>
            <value>
                <fullName>Cloud Data Management</fullName>
            </value>
            <value>
                <fullName>EDGE and CloudOn</fullName>
            </value>
            <value>
                <fullName>Cloud Cluster</fullName>
            </value>
            <value>
                <fullName>Polaris</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Cloud Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>