force-app/main/default/objects/POC_Product__mdt/fields/Switch_Type__c.field-meta.xml
<CustomField>
    <fullName>Switch_Type__c</fullName>
    <label>Switch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10GbE SFP+</fullName>
                <default>true</default>
                <label>10GbE SFP+</label>
            </value>
            <value>
                <fullName>10Gbase-T</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>